Added meta tags

--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <title>ZacK#3585</title>
+    <meta property="og:title" content="ZacK - Sebastian" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nextzac.github.io" />
+    <meta property="og:image" content="https://cdn.discordapp.com/avatars/242314148229283840/0a904518fb7bb5a655f5d12863a62987.webp" />
+    <meta property="og:description" content="Hey, I'm Sebastian, I Code and Ride motorcycles." />
+    <meta name="theme-color" content="#FF0000">
+    <meta name="twitter:card" content="summary_large_image">
 <body>
     <div class="content h-100" style="margin-top: 15%;">
         <div>
         <br>
-        <h1 class="text-center"><b>ZacK#3585</b><br>
+        <h1 class="text-center"><b>Sebastian</b><br>
         Developer
         </h1>
         <h3 class="showhide text-center"><b> Skills »</b>
