--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <meta name="theme-color" content="#FF0000">
     <meta name="twitter:card" content="summary_large_image">
 <body>
-    <div class="content h-100" style="margin-top: 15%;">
+    <div class="content h-100 fadein" style="margin-top: 15%;">
         <div>
         <br>
-        <h1 class="text-center"><b>Sebastian</b><br>
+        <h1 class="text-center" id="hover"><b>Sebastian</b><br>
         Developer
         </h1>
         <h3 class="showhide text-center"><b> Skills »</b>
