--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <meta name="theme-color" content="#FF0000">
     <meta name="twitter:card" content="summary_large_image">
 <body>
+    <div class="spinner-border slideUp spinner" role="status">
+    </div>
     <div class="content h-100 fadein" style="margin-top: 15%;">
         <div>
         <br>
@@ -20,7 +22,7 @@
         Developer
         </h1>
         <h3 class="showhide text-center"><b> Skills »</b>
-            <span class="txt-rotate"  data-period="500" data-rotate='[ "C#", "LUA", "HTML/CSS/JS", "JAVA", "MYSQL", "PHP"]'></span>
+            <span class="txt-rotate"  data-period="500" data-rotate='[ "C#", "LUA", "HTML", "JAVA", "MYSQL", "PHP"]'></span>
         </h1>
         </div> 
     <div class="d-flex justify-content-center" style="bottom: 1%;">
