--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <meta name="theme-color" content="#FF0000">
     <meta name="twitter:card" content="summary_large_image">
 <body>
-    <div class="spinner-border slideUp spinner" role="status">
+    <div class="spinner-border spinner" style="width: 64px; height: 64px;">
     </div>
     <div class="content h-100 fadein" style="margin-top: 15%;">
         <div>
         <br>
-        <h1 class="text-center" id="hover"><b>Sebastian</b><br>
+        <h1 class="text-center shadowOutline" id="hover"><b>Sebastian</b><br>
         Developer
         </h1>
         <h3 class="showhide text-center"><b> Skills »</b>
-            <span class="txt-rotate"  data-period="500" data-rotate='[ "C#", "LUA", "HTML", "JAVA", "MYSQL", "PHP"]'></span>
+            <span class="txt-rotate"  data-period="500" data-rotate='[ "C#", "LUA", "FULL STACK", "JAVA", "MYSQL", "PHP", "LINUX/UNIX ADMIN", "DEBIAN", "CENTOS"]'></span>
         </h1>
         </div> 
     <div class="d-flex justify-content-center" style="bottom: 1%;">
