--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <meta property="og:description" content="Hey, I'm Sebastian, I Code and Ride motorcycles." />
     <meta name="theme-color" content="#FF0000">
     <meta name="twitter:card" content="summary_large_image">
+    <div id="particles-js"></div>
+
 <body>
-    <div class="spinner-border spinner" style="width: 64px; height: 64px;">
-    </div>
     <div class="content h-100 fadein" style="margin-top: 15%;">
         <div>
         <br>
@@ -37,15 +37,15 @@
         </div> 
     </div>
 </div> 
-
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="assets/js/index.js"></script>
+<script src="assets/js/particles.js"></script>
+<script type="module" src="assets/js/app.js"></script>
 <script
   src="https://code.jquery.com/jquery-3.5.1.min.js"
   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
   crossorigin="anonymous"></script>
-  
 </body>
 </html>
