--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <div>
             <a href="https://instagram.com/sebpebzac" class="fab fa-instagram-square fa-3x" style="color: rgb(82, 82, 82);"></a>
         </div> 
+        <div style="margin-left: 1%;">
+            <a href="https://nextzac.github.io/terminal" class="fas fa-terminal fa-3x" style="color: rgb(82, 82, 82);"></a>
+        </div> 
     </div>
 </div> 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
