added volume control

--- a/terminal/index.html
+++ b/terminal/index.html
@@ -13,8 +13,8 @@
   <link rel="icon" type="image/png" href="cc.png">
     <link rel="stylesheet" href="css\style.css">
     <link rel="stylesheet" href="css\font-awesome.min.css">
-	<audio loop="" id="music">
-		<source src="https://soundcloud.com/ryan-cc/weather" type="audio/mpeg">
+	<audio loop id="music">
+		<source src="weather.mp3" type="audio/mpeg">
 	</audio>
   </head>
     
@@ -27,9 +27,9 @@
         <div id="terminal-header">
           <div>
             <div id="controls">
-              <i class="fa fa-window-minimize" style="font-size: 8px;"></i>
-              <i class="fa fa-window-restore" style="font-size: 10px;"></i>
-              <i class="fa fa-times" style="font-size: 14px;"></i>
+              <i class="fas fa-window-minimize" style="font-size: 8px;"></i>
+              <i class="fas fa-window-restore" style="font-size: 10px;"></i>
+              <i class="fas fa-times" style="font-size: 14px;"></i>
             </div>
 			<div style="margin: 0 auto; width: 100px;" class="red">Terminal</div>
           </div>
