--- a/terminal/index.html
+++ b/terminal/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>ZacK#3585</title>
+    <link rel="icon" href="../assets/icon.svg" type="image/gif" >
     <meta property="og:title" content="ZacK - Sebastian" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://nextzac.github.io/terminal" />
