Removed Picture From Embed

--- a/terminal/index.html
+++ b/terminal/index.html
@@ -5,11 +5,10 @@
     <title>ZacK#3585</title>
     <link rel="icon" href="../assets/icon.svg" type="image/gif" >
     <meta property="og:title" content="ZacK - Sebastian" />
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://nextzac.github.io/terminal" />
-    <meta property="og:image" content="https://cdn.discordapp.com/avatars/242314148229283840/0a904518fb7bb5a655f5d12863a62987.webp" />
     <meta property="og:description" content="Hey, i guess you found my terminal. Quite cool ey" />
-    <meta name="theme-color" content="#FF0000">
+    <meta name="theme-color" content="#2e2e2e">
     <meta name="twitter:card" content="summary_large_image">
   <link rel="icon" type="image/png" href="cc.png">
     <link rel="stylesheet" href="css\style.css">
