--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         Developer
         </h1>
         <h3 class="showhide text-center"><b> Skills »</b>
-            <span class="txt-rotate"  data-period="500" data-rotate='[ "C#", "LUA", "FULL STACK", "JAVA", "MYSQL", "PHP", "LINUX/UNIX ADMIN", "DEBIAN", "CENTOS"]'></span>
+            <span class="txt-rotate"  data-period="500" data-rotate='[ "C#", "LUA", "FULL STACK", "JAVA", "MYSQL", "PHP", "LINUX/UNIX ADMIN", "DEBIAN", "CENTOS", "NGINX"]'></span>
         </h1>
         </div> 
     <div class="d-flex justify-content-center" style="bottom: 1%;">
